--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gen-backend",
-  "version": "2.0.0",
+  "version": "2.0.3",
   "description": "A CLI tool to generate a rock solid backend setup using MongoDB, Express and Node",
   "keywords": [
     "cli",
@@ -20,7 +20,7 @@
   },
   "license": "MIT",
   "author": "Ashikur Rafi",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
